# VibeFinderAI

./: .env.example  README.md  app.py  human_eval_app.py  model_card.md  pyproject.toml  requirements.txt
assets/: architecture.mmd  evaluation.mmd  flowchart.mmd
config/: retrieval_prompt_config.json
evaluation/: benchmark_queries.json
evaluation/judgements/: task_keys.jsonl  tasks.jsonl
evaluation/results/: latest.json  latest.md  latest_status.json
evaluation/results/runs/: eval_betrayal_female_high_energy__full.json  eval_betrayal_female_high_energy__no_critic_revision.json  eval_betrayal_female_high_energy__no_lyric_retriever.json  eval_cheating_guilty_perspective__full.json  (+26 more)
scripts/: __init__.py  aggregate_judgements.py  build_judge_tasks.py  build_retrieval_prompt_config.py  run_evaluation.py  run_llm_judge.py  setup_dataset_index.py  visualize_judge_results.py
src/vibefinder/: __init__.py  agent_nodes.py  config.py  data.py  dataset.py  embeddings.py  evaluation.py  graph.py  graph_runtime.py  judge_evaluation.py  judge_visualization.py  llm.py  pipeline_state.py  prompts.py  schema.py  tracing.py  variants.py
tests/: test_agent_nodes.py  test_agent_schemas.py  test_candidate_scoring_tool.py  test_data.py  test_dataset.py  test_evaluation.py  test_evaluation_runner.py  test_feature_filter_tool.py  test_graph.py  test_graph_runtime.py  test_judge_evaluation.py  test_judge_visualization.py  test_llm.py  test_lyric_retrieval_tool.py  test_metadata_retrieval_tool.py  test_pipeline_state.py  test_prompts.py  test_reliability_tool.py  test_tracing.py
(+25 files in other folders)
